--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "colors": "^1.4.0",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "jsonwebtoken": "^9.0.3",
     "morgan": "^1.10.1",
     "mysql2": "^3.16.0",
     "nodemon": "^3.1.11",
