--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
     "bcrypt": "^6.0.0",
     "colores": "^1.0.1",
     "colors": "^1.4.0",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "morgan": "^1.10.1",
+    "multer": "^2.0.2",
     "mysql2": "^3.16.0",
     "nodemon": "^3.1.11",
     "pg": "^8.16.3",
-    "sequelize": "^6.37.7"
+    "sequelize": "^6.37.7",
+    "sharp": "^0.34.5"
   }
 }
